# weslei-bassotto

./: .dockerignore  .gitignore  Jenkinsfile  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: __init__.py  main.py
api/app/core/: __init__.py  deps.py  security.py  settings.py
api/app/db/: __init__.py  indexes.py  mongo.py
api/app/routers/: __init__.py  admin.py  auth.py  consultancy.py  me.py  payments.py
api/app/schemas/: __init__.py  consultancy.py  payment.py  user.py
api/app/seeder/: __init__.py  seed.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.css  main.jsx
frontend/src/auth/: ProtectedRoute.jsx
frontend/src/components/: SiteNavbar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: api.js  date.js  jwt.js
frontend/src/pages/: ForgotPassword.jsx  Login.css  Login.jsx  NotFound.jsx  ResetPassword.jsx
frontend/src/pages/admin/: Dashboard.jsx  Home.jsx
frontend/src/pages/user/: CheckoutBrick.jsx  Home.jsx  Questionnaire.jsx  SubscriberArea.jsx
frontend/src/routes/: ProtectedRoute.jsx  index.jsx
web/: Caddyfile  Caddyfile.dev  Dockerfile
